# pred_widget

./: README.md  setup.cfg
predcom/: napari.yaml  util.py
predcom.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
predcom/predcom_plugin/: _annotator.py  base_widget.py  compare.py  predict.py
predcom/predcom_plugin/file_reader_plugin/: elf_reader.py
