[metadata]
name = predcom
version = attr: predcom.__version__
description = Automated counting for biomedical images
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/computational-cell-analytics/stacc
author = Luca Freckmann
author_email = luca.freckmam@uni-goettingen.de
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
# project_urls =
#     Bug Tracker = https://github.com/computational-cell-analytics/stacc/issues
#     Documentation = https://github.com/computational-cell-analytics/stacc
#     Source Code = https://github.com/computational-cell-analytics/stacc
#     User Support = https://github.com/computational-cell-analytics/stacc/issues

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .

# tell napari where to find to your manifest
[options.entry_points]
napari.manifest =
    predcom = predcom:napari.yaml

# console_scripts =
#    predcom.compare = stacc.prediction:main

# make sure it gets included in your package
[options.package_data]
* = *.yaml